# IPN_MPC

./: .gitignore  CMakeLists.txt  README.md  dly_camera.cpp  dly_camera.h  package.xml
app/: .Orin_rotor_asm_uart.cpp.swn  .Orin_rotor_asm_uart.cpp.swo  .Orin_rotor_asm_uart.cpp.swp  Aerial_vehicle_calibration.cpp  Aerial_vehicle_calibration_BLACK.cpp  Aerial_vehicle_calibration_NBEM.cpp  Aerial_vehicle_calibration_for_test.cpp  Aerial_vehicle_calibration_sim.cpp  Aerial_vehicle_calibration_test.cpp  Aerial_vehicle_calibration_usim.cpp  Batch_Fixed_Lag_Dynamics_NBEM.cpp  Batch_Opt_Dynamics_NBEM.cpp  Dynamics_factor_test.cpp  JPCM_TGyro_CBF_Test.cpp  JPCM_TGyro_OA_Test.cpp  JPCM_TGyro_Test.cpp  JPCM_TGyro_Wall.cpp  JPCM_TGyro_version_Test.cpp  Joint_Estimation_Control.cpp  Joint_Estimation_Control_iSAM.cpp  Joint_Optimization_MPC.cpp  Joint_Optimization_MPC_iSAM.cpp  Joint_Positioning_Control_Test.cpp  Joint_opt_control_sim.cpp  Joint_opt_control_traj_isam.cpp  Joint_opt_control_traj_sim.cpp  Mav_JPCM_TGyro_version_Test.cpp  Motor_calibration.cpp  Online_Calibration_BLACK.cpp  Orin_board_can.cpp  Orin_csi_camera.cpp  Orin_rotor_angular_speed.cpp  Orin_rotor_angular_speed_test.cpp  Orin_rotor_asm_uart.cpp  Orin_rsm_can.cpp  Orin_rsm_transmit_can.cpp  Orin_rsm_uart.cpp  Quadrotor_dynamics_calibration.cpp  SW_Joint_Estimation_Control.cpp  Test_Thrust_cmd.cpp  (+12 more)
bash/: .start_board_can.sh.swp  .start_sys.sh.swp  JPCM_record_flight.sh  JPCM_record_flight_nocam.sh  mavcmd.sh  record_calib_frame.sh  record_flight.sh  record_frame_calib.sh  start_board_can.sh  start_board_uart.sh  start_mavros.sh  start_px4ctrl.sh  start_rsm_can.sh  start_sys.sh  start_sys_fusion.sh  start_vicon.sh  start_xsens_imu.sh
build-b/: Aerial_vehicle_calibration_test  CMakeCache.txt  Makefile  build.ninja  cmake_install.cmake  compile_commands.json  libwio_factor_lib.1.0.dylib  libwio_factor_lib.dylib  wheel_imu_error  wheel_imu_factor  wheel_imu_pim
cmake/: FindGTSAM.cmake
config/: dynamics.yaml  dynamics_BLACK.yaml  dynamics_NeuroBEM.yaml  dynamics_NeuroBEM_csv.yaml  dynamics_calib.yaml  factor_graph.yaml  factor_graph_2.yaml  factor_graph_TGyro.yaml  factor_graph_TGyro_CBF.yaml  factor_graph_hin.yaml  quadrotor.yaml  quadrotor_TGyro.yaml  quadrotor_TGyro_CBF.yaml  rsm_uart.yaml  se3_controller.yaml  test.yaml  traj.yaml
data/: JEC_Fluctuate_log.txt  JEC_JECM_InfiniteR_T0.5_M0.5_Jun18_log.txt  JEC_JECM_R06_log.txt  JEC_JECM_R1.2_log.txt  JEC_JECM_R300_log.txt  JEC_JECM_R3_log.txt  JEC_JECM_Rev_0.10m_log.txt  JEC_JECM_Rev_0.20m_log.txt  JEC_JECM_Rev_onlyGNSS_5_1__log.txt  JEC_JECM_TEST_log.txt  JEC_JECM_onlyGNSS_5_1__log.txt  JEC_JECM_onlyGNSS_5_N2__log.txt  JEC_JECM_onlyGNSS_5_N3__log.txt  JEC_JPCM_INIT_2_log.txt  JEC_JPCM_INIT_3_log.txt  JEC_JPCM_INIT_log.txt  JEC_JPCM_SW_N10_log.txt  JEC_JPCM_TEST_3_log.txt  JEC_JPCM_TimeConstant100_log.txt  JEC_JPCM_TimeConstant25_log.txt  JEC_JPCM_TimeConstant50_log.txt  JEC_JPCM_TimeConstant60_log.txt  JEC_MPC_PRE_TEST_log.txt  JEC_MPC_Rev_log.txt  JEC_MPC_T1_M0.2_log.txt  JEC_MPC_TEST_1_log.txt  JEC_MPC_TEST_2_log.txt  JEC_MPC_TEST_3_log.txt  JEC_MPC_TEST_log.txt  JEC_MPC_onlyGNSS_5_1__log.txt  JEC_MPC_onlyGNSS_5_N3__log.txt  JEC_MPC_onlyGNSS_NON_5_1__log.txt  JEC_SW_JECM_Rev_onlyGNSS_5_N2__log.txt  JEC_SW_JECM_TEST_log.txt  JEC_SW_JECM_onlyGNSS_5_N2__log.txt  JEC_log.txt  JPC_JPCM_HIN_TEST_6_log.txt  JPC_JPCM_TEST_Drag_0.3_log.txt  JPC_JPCM_TEST_Drag_log.txt  JPC_JPCM_TEST_GOOD_HIN.txt  (+22 more)
data/Motor/: battery_rsm_2023-10-06-16-50-09.txt  motor_calib_debug_log.txt  rsm_2023-10-06-16-50-09.txt
data/NeuroBEM/test1/: neuro_bem.txt
data/Traj/: Traj_mahua.txt  Traj_vert_osc.txt  Traj_wobbly.txt  Traj_wobbly_radius_1.5_vs_4.txt
data/log/: Aerial_dynamics_NeuroBEM.INFO  NeuroBEM20230903-095913.62124  NeuroBEM20230903-100203.62164
data/quad13/: pose_2023-10-19-11-19-44.txt  pose_2024-02-21-13-45-50.txt  rsm_2023-10-19-11-19-44.txt  rsm_2023-10-19-11-31-36.txt  rsm_2023-10-23-17-21-01.txt  rsm_2023-10-24-13-13-33.txt  rsm_2023-10-26-20-23-55.txt  rsm_2023-10-26-20-25-44.txt  rsm_2023-10-29-00-44-03.txt  rsm_2024-02-21-13-45-50.txt
include/: UI.h  abb_egm_wrapper.h  color.h  gtsam_wrapper.h  wheel_imu_factor.h  wheel_imu_integration.h  wio_factor.h  wio_integration.h
include/calibration/: Calibration_Inertial.h  Calibration_factor.h  Dynamics_calib.h
include/control/: CBF_factor.h  Dynamics_control_factor.h  Dynamics_params.h  Energy_control_factor.h  Minimum_snap_controller.h  SE3_controller.h
include/env_sensors_sim/: Common.h  IMU.h  Landmarks.h  Lidar.h  Obs.h
include/hardware/: mavros_bridge.h  mavros_middleware.h  spi_driver.h  uart.h
include/quadrotor_simulator/: CBF_factor.h  Dynamics_control_factor.h  Dynamics_factor.h  Dynamics_params.h  Quadrotor.h  Quadrotor_SO3.h
include/trajectory_generator/: Trajectory_generator.h
matlab/: JEC_log.m  Recovery.m  check2PI.m  plot_control_error.asv  plot_control_error.m  quad13_precessing.m  sw.m  wio_trajectory.m
msg/: IMU.msg  INPUT.msg  Rsm.msg
py/: drag_force.py  plot_CBF_Ani_Traj.py  plot_CBF_Traj.py  plot_control.py  plot_control_TGyro.py  plot_drag.py  plot_dynamics.py  plot_dynamics_old.py  plot_dynamics_temp.py  plot_motor.py  plot_params.py  plot_path_comparison.py  plot_recovery.py  plot_traj.py  plot_vss.py  recovery.py  sw_jpcm.py  time_constant.py
src/: UI.cpp  abb_egm_wrapper.cpp  wheel_imu_factor.cpp  wheel_imu_integration.cpp  wio_factor.cpp  wio_integration.cpp
src/calibration/: Calibration_factor.cpp  Calibration_inertial.cpp  Dynamics_calib.cpp
src/control/: CBF_factor.cpp  Dynamics_control_factor.cpp  Dynamics_factor.cpp  Energy_control_factor.cpp  Minimum_snap_controller.cpp  SE3_controller.cpp
src/dynamics/: CBF_factor.cpp  Dynamics_control_factor.cpp  Dynamics_factor.cpp  Quadrotor.cpp  Quadrotor_SO3.cpp
src/env_sensors_sim/: IMU.cpp  Landmarks.cpp  Lidar.cpp  Obs.cpp
src/hardware/: mavros_bridge.cpp  mavros_middleware.cpp  uart.cpp
src/test_dynamics/: test_dynamics.cpp
src/trajectory_generator/: Trajectory_generator.cpp
src/wio/: wio_factor.cpp  wio_integration.cpp
(+189 files in other folders)
