<?xml version="1.0"?>
<package format="2">
    <name>IPN_MPC</name>
    <version>0.0.0</version>
    <description>The ipn mpc package</description>

    <maintainer email="hyye@todo.todo">hyye</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>mavros_msgs</build_depend>
    <exec_depend>mavros_msgs</exec_depend>
    <build_export_depend>mavros_msgs</build_export_depend>

    <build_depend>roscpp</build_depend>
    <exec_depend>roscpp</exec_depend>
    <build_export_depend>roscpp</build_export_depend>

    <build_depend>message_runtime</build_depend>
    <exec_depend>message_runtime</exec_depend>
    <build_export_depend>message_runtime</build_export_depend>

    <build_depend>std_msgs</build_depend>
    <exec_depend>std_msgs</exec_depend>
    <build_export_depend>std_msgs</build_export_depend>

    <build_depend>geometry_msgs</build_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    

      <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>